[tool.poetry]
name = "coverage"
version = "0.1.0"
description = ""
authors = ["LucasLvy <lucaslevy10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cairo-lang = "^0.10.0"
asynctest = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
