[tool.poetry]
name = "cairo-coverage"
version = "0.1.6"
description = "Cairo coverage module"
authors = ["LucasLvy <lucaslevy10@gmail.com>"]
readme = "README.md"
packages = [{ include = "cairo_coverage" }]
repository = "https://github.com/starknet-edu/cairo-coverage"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.3"
asynctest = "^0.13.0"
cairo-lang = "^0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
